# crustgo-ffi

./: .gitignore  Cargo.toml  README.md  buildcc.sh  buildcxx.sh  buildgo.sh  buildlib-cxx.sh  buildlib.sh  cbindgen.toml  clean.sh
cc-app/: main.cc
cxx-app/: cxx.h  main.cc
go-app/: main.go
include/: ffi-cxx.cc  ffi-cxx.h  ffi.h
rust-lib/: Cargo.toml
rust-lib-cxx/: Cargo.toml
rust-lib-cxx/src/: lib.rs
rust-lib/src/: lib.rs
